# swaybg-spread

./: Cargo.toml  README.md
src/: main.rs  outputs.rs  parser.rs  setter.rs  splitter.rs
