[package]
name = "swaybg-spread"
version = "0.2.0"
edition = "2021"
authors = ["Fyodor Perejoguine <fyodordev@gmail.com>"]
description = "CLI tool to set wallpaper spanning multiple outputs on sway."
homepage = ""
repository = ""
license = "GNU GPL v3"

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit", default_features = false, features = [ "calloop" ] }
wayland-client = "0.30.1"
image = "0.24.6"
toml = "0.7.3"
